--- a/Projet_cave/WebContent/templates/sidebar.xhtml
+++ b/Projet_cave/WebContent/templates/sidebar.xhtml
@@ -14,39 +14,79 @@
 	
 	<h:form>
 		<b:flyOutMenu styleClass="sidebar">
+			<h:commandLink action="#{produitBean.initFilter()}" value="Initialiser" />
 			<h4>Filtrer</h4>
+			
 			
 			<label class="control-label">Prix Max</label>
 			<!--  <b:slider2 min="0" max="500" span="7" label="Prix"/> -->
 			<h:panelGrid columns="1" style="width : 80%; margin :2% 10%;">
-		        <h:outputText id="output" value="#{sliderView.number2} €" />
-		        <h:inputHidden id="txt2" value="#{sliderView.number4}" />
-		        <p:slider for="txt2" display="output" style="width: 100%; " displayTemplate="{value} €" maxValue="#{produitBean.prixMax}"/>
+			<h:commandLink id="actualiser" value="actualiser" action="#{produitBean.filterByPrix()}" />
+		        <h:outputText id="output" value="#{produitBean.prixFiltre} €" />
+		        <h:inputHidden id="txt2" value="#{produitBean.prixFiltre}" />
+		        <p:slider for="txt2" display="output" style="width: 100%; " displayTemplate="{value} €" maxValue="#{produitBean.prixMax}" >
+		        	<p:ajax event="slideEnd" listener="#{produitBean.onSlideEnd}" update="actualiser"/>
+		        </p:slider>
+		        
 		    </h:panelGrid>
 			<br/>
 			
 			
-			
+			<c:if test="#{produitBean.produitRecherche eq 'Vin'}">
 				<label class="control-label">Pays</label>
 				<ui:repeat value="#{produitBean.listePaysVin}" var="cat">
-					<b:navLink value="#{cat.nomObjetCat}" action="#{produitBean.filterVinByPays()}">
-						<f:param name="paysId" value="cat.idCategorie"/>
-					</b:navLink>
+					<b:navCommandLink value="#{cat.nomObjetCat}" action="#{produitBean.filterVinByPays(cat.idCategorie)}"/>
 				</ui:repeat>
 				<br/>
 				
 				<label class="control-label">Regions</label>
 				<ui:repeat value="#{produitBean.listeRegionVin}" var="cat">
-					<b:navLink value="#{cat.nomObjetCat}" />
+					<b:navCommandLink value="#{cat.nomObjetCat}" action="#{produitBean.filterVinByRegion(cat.idCategorie)}"/>
 				</ui:repeat>
 				<br/>
 				
 				<label class="control-label">Types</label>
 				<ui:repeat value="#{produitBean.listeTypeVin}" var="cat">
-					<b:navLink value="#{cat.nomObjetCat}" />
+					<b:navCommandLink value="#{cat.nomObjetCat}" action="#{produitBean.filterVinByType(cat.idCategorie)}"/>
 				</ui:repeat>
 				<br/>
+			</c:if>
 			
+			<c:if test="#{produitBean.produitRecherche eq 'Champagne'}">
+				<label class="control-label">Types</label>
+				<ui:repeat value="#{produitBean.listeTypeChampagne}" var="cat">
+					<b:navCommandLink value="#{cat.nomObjetCat}" action="#{produitBean.filterChampagneByType(cat.idCategorie)}"/>
+				</ui:repeat>
+				<br/>
+			</c:if>
+			
+			<c:if test="#{produitBean.produitRecherche eq 'Spiritueux'}">
+				<label class="control-label">Pays</label>
+				<ui:repeat value="#{produitBean.listePaysSpiritueux}" var="cat">
+					<b:navCommandLink value="#{cat.nomObjetCat}" action="#{produitBean.filterSpiritueuxByPays(cat.idCategorie)}"/>
+				</ui:repeat>
+				<br/>
+				
+				<label class="control-label">Types</label>
+				<ui:repeat value="#{produitBean.listeTypeSpiritueux}" var="cat">
+					<b:navCommandLink value="#{cat.nomObjetCat}" action="#{produitBean.filterSpiritueuxByType(cat.idCategorie)}"/>
+				</ui:repeat>
+				<br/>
+			</c:if>
+			
+			<c:if test="#{produitBean.produitRecherche eq 'Bière'}">
+				<label class="control-label">Pays</label>
+				<ui:repeat value="#{produitBean.listePaysBiere}" var="cat">
+					<b:navCommandLink value="#{cat.nomObjetCat}" action="#{produitBean.filterBiereByPays(cat.idCategorie)}"/>
+				</ui:repeat>
+				<br/>
+				
+				<label class="control-label">Types</label>
+				<ui:repeat value="#{produitBean.listeTypeBiere}" var="cat">
+					<b:navCommandLink value="#{cat.nomObjetCat}" action="#{produitBean.filterBiereByType(cat.idCategorie)}"/>
+				</ui:repeat>
+				<br/>
+			</c:if>
 				
 				
 		  	
