--- a/Projet_cave/WebContent/resources/css/style_perso.css
+++ b/Projet_cave/WebContent/resources/css/style_perso.css
@@ -138,3 +138,45 @@
 .panel-group{
 	margin :  0 !important;
 }
+
+#singleContainer{
+	padding : 2% 20%;
+}
+
+#singleDesignation{
+	color: #821c00;
+	margin-bottom: 5%;
+}
+#singleContainerPhoto{
+	diqplay : block;
+	float : left;
+	width : 30%;
+	overflow: hidden;
+	text-align: center;
+	margin-bottom: 10%;
+}
+
+#singlePhoto{
+	width: auto;
+	max-height : 500px;
+	margin-left: 50%;
+	transform: translateX(-50%);
+}
+
+#singleCaracteristique{
+	display : block;
+	float : left;
+	width : 70%;
+	padding : 0 10%;
+	text-align: justify;
+}
+
+#singleCaracteristique>p{
+	margin : 0;
+}
+
+#singlePrix{
+	margin-right : 10px;
+	text-align : right;
+	color: #821c00;
+}
