authentification new version

--- a/Projet_cave/WebContent/templates/header.xhtml
+++ b/Projet_cave/WebContent/templates/header.xhtml
@@ -27,7 +27,7 @@
 			</h:form>
 		  
 		  
-		  <h:form>
+		  <h:form id="connection">
 		  <b:dropButton  value="Mon compte" styleClass="moncompte" style="margin: 0 30px;">
 		  		<label class="control-label">Username :</label>
       			<b:inputText placeholder="Username" />
@@ -37,6 +37,10 @@
       			<b:link type="submit" value="créer un compte"/>
 		  
 		  </b:dropButton>
+		  </h:form>
+		  
+		  <h:form id="deconnection">
+		  		<b:button type="submit" class="btn btn-primary" value="Se Déconnecter"/>
 		  </h:form>
 		  
 		  <h:form>
